// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component QuickTokenCard renders best value popular QuickTokenCard correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "flexDirection": "row",
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 621,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "borderBottomLeftRadius": 12,
          "borderTopLeftRadius": 12,
          "height": 193.545,
          "width": 227,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 193.545,
          "marginLeft": -1.5,
          "width": 396,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E5E5E5",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 167,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "left": -20,
                "position": "absolute",
                "top": -7.5,
              },
            ]
          }
          width={207}
        >
          <Image
            bannerType="PURPLE"
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "height": 39.6,
                  "width": 207,
                },
              ]
            }
            width={207}
          />
          <Text
            alignCenter={false}
            allowFontScaling={false}
            bannerType="PURPLE"
            color="#000000"
            fontFamily="BOLD"
            fontSize={12}
            isUnderlined={false}
            isUppercase={true}
            maxFontSizeMultiplier={1.3}
            size="XSMALL"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "CalibreBold",
                  "fontSize": 24,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#000000",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 1.5,
                  "position": "absolute",
                },
              ]
            }
          >
            best value
          </Text>
        </View>
        <View
          marginTop={0}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "marginTop": 0,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 36,
                  "marginRight": 7.5,
                  "width": 36,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="SEMI BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Calibre-Semibold",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                  },
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 227,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(96,202,142,1)",
                "borderRadius": 48,
                "height": 60,
                "justifyContent": "center",
                "marginVertical": 0,
                "opacity": 1,
                "width": 180,
              }
            }
            testID="quick-buy-button"
          >
            <View
              borderRadius={24}
              colorScheme="rgba(128,229,173,1)"
              height={30}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(128,229,173,1)",
                    "borderRadius": 48,
                    "height": 50,
                    "justifyContent": "center",
                    "width": 174,
                  },
                ]
              }
              width={90}
            >
              <View
                borderRadius={24}
                colorScheme="rgba(114,213,158,1)"
                height={30}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(114,213,158,1)",
                      "borderRadius": 68,
                      "height": 46,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 174,
                    },
                  ]
                }
                width={90}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 20,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 21,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 10,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    $15.99
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component QuickTokenCard renders on sale QuickTokenCard correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "flexDirection": "row",
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 621,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "borderBottomLeftRadius": 12,
          "borderTopLeftRadius": 12,
          "height": 193.545,
          "width": 227,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 193.545,
          "marginLeft": -1.5,
          "width": 396,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E5E5E5",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 167,
            },
          ]
        }
      >
        <View
          marginTop={0}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "marginTop": 0,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 36,
                  "marginRight": 7.5,
                  "width": 36,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#000000"
                fontFamily="SEMI BOLD"
                isUnderlined={false}
                isUppercase={false}
                maxFontSizeMultiplier={1.3}
                size="XSMALL"
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "Calibre-Semibold",
                      "fontSize": 24,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#000000",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginHorizontal": 4.5,
                      "marginTop": 6,
                    },
                  ]
                }
              >
                1
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "borderBottomWidth": 3,
                      "borderColor": "#F06B59",
                      "height": 1,
                      "position": "absolute",
                      "top": 16,
                      "width": "100%",
                    },
                  ]
                }
              />
            </View>
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="BOLD ITALIC"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreBoldItalic",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                  },
                ]
              }
            >
              10
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 227,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(96,202,142,1)",
                "borderRadius": 48,
                "height": 60,
                "justifyContent": "center",
                "marginVertical": 0,
                "opacity": 1,
                "width": 180,
              }
            }
            testID="quick-buy-button"
          >
            <View
              borderRadius={24}
              colorScheme="rgba(128,229,173,1)"
              height={30}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(128,229,173,1)",
                    "borderRadius": 48,
                    "height": 50,
                    "justifyContent": "center",
                    "width": 174,
                  },
                ]
              }
              width={90}
            >
              <View
                borderRadius={24}
                colorScheme="rgba(114,213,158,1)"
                height={30}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(114,213,158,1)",
                      "borderRadius": 68,
                      "height": 46,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 174,
                    },
                  ]
                }
                width={90}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 20,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 21,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 10,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    $15.99
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component QuickTokenCard renders regular QuickTokenCard correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "flexDirection": "row",
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 621,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "borderBottomLeftRadius": 12,
          "borderTopLeftRadius": 12,
          "height": 193.545,
          "width": 227,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 193.545,
          "marginLeft": -1.5,
          "width": 396,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E5E5E5",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 167,
            },
          ]
        }
      >
        <View
          marginTop={0}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "marginTop": 0,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 36,
                  "marginRight": 7.5,
                  "width": 36,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="SEMI BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Calibre-Semibold",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                  },
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 227,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(96,202,142,1)",
                "borderRadius": 48,
                "height": 60,
                "justifyContent": "center",
                "marginVertical": 0,
                "opacity": 1,
                "width": 180,
              }
            }
            testID="quick-buy-button"
          >
            <View
              borderRadius={24}
              colorScheme="rgba(128,229,173,1)"
              height={30}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(128,229,173,1)",
                    "borderRadius": 48,
                    "height": 50,
                    "justifyContent": "center",
                    "width": 174,
                  },
                ]
              }
              width={90}
            >
              <View
                borderRadius={24}
                colorScheme="rgba(114,213,158,1)"
                height={30}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(114,213,158,1)",
                      "borderRadius": 68,
                      "height": 46,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 174,
                    },
                  ]
                }
                width={90}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 20,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 21,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 10,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    $15.99
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component QuickTokenCard renders regular popular QuickTokenCard correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "flexDirection": "row",
        "marginTop": 18,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 621,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "borderBottomLeftRadius": 12,
          "borderTopLeftRadius": 12,
          "height": 193.545,
          "width": 227,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 193.545,
          "marginLeft": -1.5,
          "width": 396,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E5E5E5",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 167,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "left": -20,
                "position": "absolute",
                "top": -7.5,
              },
            ]
          }
          width={207}
        >
          <Image
            bannerType="NORMAL"
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "height": 39.6,
                  "width": 207,
                },
              ]
            }
            width={207}
          />
          <Text
            alignCenter={false}
            allowFontScaling={false}
            bannerType="NORMAL"
            color="#000000"
            fontFamily="BOLD"
            fontSize={12}
            isUnderlined={false}
            isUppercase={true}
            maxFontSizeMultiplier={1.3}
            size="XSMALL"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "CalibreBold",
                  "fontSize": 24,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#000000",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 1.5,
                  "position": "absolute",
                },
              ]
            }
          >
            popular
          </Text>
        </View>
        <View
          marginTop={0}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "marginTop": 0,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 36,
                  "marginRight": 7.5,
                  "width": 36,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="SEMI BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Calibre-Semibold",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                  },
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
              "width": 227,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginHorizontal": 10,
                "marginVertical": 10,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(96,202,142,1)",
                "borderRadius": 48,
                "height": 60,
                "justifyContent": "center",
                "marginVertical": 0,
                "opacity": 1,
                "width": 180,
              }
            }
            testID="quick-buy-button"
          >
            <View
              borderRadius={24}
              colorScheme="rgba(128,229,173,1)"
              height={30}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(128,229,173,1)",
                    "borderRadius": 48,
                    "height": 50,
                    "justifyContent": "center",
                    "width": 174,
                  },
                ]
              }
              width={90}
            >
              <View
                borderRadius={24}
                colorScheme="rgba(114,213,158,1)"
                height={30}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(114,213,158,1)",
                      "borderRadius": 68,
                      "height": 46,
                      "justifyContent": "center",
                      "marginTop": 8,
                      "width": 174,
                    },
                  ]
                }
                width={90}
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 20,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 21,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 10,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    $15.99
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
